# axium

./: Cargo.toml  REAMD.md
.devcontainer/: devcontainer.json
core/: Cargo.toml
core/src/: id.rs  lib.rs
core/src/definition/: delay.rs  mod.rs  universe.rs
core/src/definition/channel/: mod.rs
core/src/definition/effect/: audio.rs  color.rs  mod.rs  movement.rs
core/src/definition/fixture/: mod.rs  mode.rs  model.rs
core/src/definition/function/: cue.rs  mod.rs  scene.rs  sequence.rs
core/src/state/: mod.rs
net/: Cargo.toml
net/src/: message.rs
node/: Cargo.toml
tui/: Cargo.toml
tui/src/: main.rs
