[workspace]
resolver = "2"
members = [ "tui","core", "net", "node"]

[workspace.package]
version = "0.0.0"
edition = "2024"
authors = ["Julian Siebert <mail@julian-siebert.de>"]

[workspace.dependencies]
tokio = { version = "1.45", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["derive", "serde"] }
toml = "0.8"
ratatui = { version = "0.29", features = ["serde"] }
zmq = { version = "0.10" }